@@ -5,7 +5,7 @@
 - list-returning routines like iso9660_fs_readdir and
   iso9660_ifs_readdir no longer return void * (and require casting)
   but return the correct type.
-- Some exmaple programs have been renamed to more give meaningful
+- Some example programs have been renamed to more give meaningful
   names.
 - Add iso9660_ifs_is_xa() a routine to determine if an iso image has
   XA attributes.
@@ -13,6 +13,7 @@
 - Some Joliet support.
 - Portability fixes for C++ and older C compilers. 
 - Work towards XBOX support.
+- Some bug fixes
 
 
 0.70
@@ -152,4 +153,4 @@
 0.1
   Routines split off from VCDImager.
 
-$Id: NEWS,v 1.55 2004/10/31 13:58:44 rocky Exp $
+$Id: NEWS,v 1.56 2004/11/06 09:16:04 rocky Exp $
